--- a/src/app/components/clients/home/home.component.html
+++ b/src/app/components/clients/home/home.component.html
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                             <div class="pp-avatar">
-                                <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
+                                <img src="{{user.user.avatar}}" alt="avatar">
                             </div>
                         </div>
                     </a>
