--- a/src/app/components/partners/partner-profile/partner-profile.component.scss
+++ b/src/app/components/partners/partner-profile/partner-profile.component.scss
@@ -4,6 +4,8 @@
 @import 'add-new-portfo.component.scss';
 @import 'add-cate.component.scss';
 @import 'edit-cate.component.scss';
+@import 'edit-avatar.component.scss';
+@import 'add-wall.component.scss';
 
 .profile-content {
     position: relative;
