--- a/src/app/components/partners/partner-profile/order-wrapper.component.scss
+++ b/src/app/components/partners/partner-profile/order-wrapper.component.scss
@@ -183,6 +183,7 @@
             text-align: center;
             color: #333;
             font-size: 20px;
+            margin-bottom: 1rem;
         }
 
         .order-content {
