--- a/src/app/components/partners/partner-profile/partner-profile.component.html
+++ b/src/app/components/partners/partner-profile/partner-profile.component.html
@@ -102,6 +102,9 @@
                     </p>
                     <div class="des-forMe-rate">
                         <div class="rate-star">
+                            <ng-container *ngIf="countRate === 0">
+                                <i *ngFor="let r of review0Star" [class]="r"></i>
+                            </ng-container>
                             <ng-container *ngIf="countRate > 0 && countRate <= 1">
                                 <i *ngFor="let r of review1Star" [class]="r"></i>
                             </ng-container>
