--- a/src/app/components/clients/filter-bar/filter-bar.component.scss
+++ b/src/app/components/clients/filter-bar/filter-bar.component.scss
@@ -4,12 +4,50 @@
 .layout-filter {
     margin-top: 5.57rem;
 
+    .cumb-wrapper {
+        width: 100%;
+        margin: 0 auto;
+
+        .cumb {
+            padding: 1rem 2.5rem 1rem;
+
+            .text-muted {
+                font-weight: 500;
+                text-decoration: none;
+                position: relative;
+                color: var(--color-primary);
+
+            }
+
+            .text-muted::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 1.5px;
+                background-color: var(--color-primary);
+                bottom: -1px;
+                left: 0;
+                transform: scaleX(0);
+                transform-origin: left;
+                transition: transform 0.3s ease;
+                // opacity: 0.7;
+            }
+
+            .text-muted:hover::after {
+                transform: scaleX(1);
+            }
+
+            color:var(--color-primary);
+
+        }
+    }
+
     .filter-container {
         width: 100%;
         margin: 0 auto;
 
         .filter-content {
-            padding: 2.5rem 2.5rem;
+            padding: 0rem 2.5rem 2rem;
             display: flex;
             justify-content: space-between;
 
@@ -18,6 +56,8 @@
 }
 
 @media(min-width:1400px) {
+
+    .cumb-wrapper,
     .filter-container {
         max-width: 1440px;
     }
