--- a/src/app/components/clients/header/header.component.html
+++ b/src/app/components/clients/header/header.component.html
@@ -105,48 +105,37 @@
                     </div>
                 </div>
                 <div class="menu-container-mobile">
-                    <li class="menu-item" [ngClass]="{'active': isDropdownVisible}" #itemDropdown>
-                        <a href="javascript:void(0)" class="menu-link" (click)="toggleDropdown()">Du lịch
-                            <i *ngIf="!isDropdownVisible" class='bx bx-collapse-vertical'></i>
-                            <i *ngIf="isDropdownVisible" class='bx bx-expand-vertical'></i>
-                        </a>
-                        <ul class="menu-dropdown" #menuDropdown [ngClass]="{'show': isDropdownVisible}">
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Chân
-                                    dung</a>
+                    <ng-container *ngFor="let url of urls; let i = index">
+                        <ng-container *ngIf="url.children; else el">
+                            <li class="menu-item" [ngClass]="{'active': isDropdownVisible[i]}" [attr.data-index]="i">
+                                <a href="javascript:void(0)" class="menu-link" (click)="toggleDropdown(i)">
+                                    {{ url.value }}
+                                    <i *ngIf="!isDropdownVisible[i]" class='bx bx-collapse-vertical'></i>
+                                    <i *ngIf="isDropdownVisible[i]" class='bx bx-expand-vertical'></i>
+                                </a>
+                                <ul class="menu-dropdown" [ngClass]="{'show': isDropdownVisible[i]}"
+                                    [attr.id]="'menuDropdown' + i">
+                                    <ng-container *ngFor="let child of url.children">
+                                        <li class="menu-dropdown-item">
+                                            <a [routerLink]="['/collection']"
+                                                [queryParams]="{ category: url.key, subcategory: child.key }"
+                                                class="menu-dropdown-link">{{ child.value }}</a>
+                                        </li>
+                                    </ng-container>
+                                </ul>
                             </li>
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Phong
-                                    cảnh</a>
+                        </ng-container>
+                        <ng-template #el>
+                            <li class="menu-item" [attr.data-index]="i">
+                                <a [routerLink]="['/collection']" [queryParams]="{ category: url.key}"
+                                    class="menu-link">
+                                    {{url.value}}
+                                </a>
                             </li>
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Đường
-                                    phố</a>
-                            </li>
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Thể
-                                    thao</a></li>
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Kỷ
-                                    yếu</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item" [ngClass]="{'active': isDropdown1Visible}" #itemDropdown1>
-                        <a href="javascript:void(0)" class="menu-link" (click)="toggleDropdown1()">Lookbook
-                            <i *ngIf="!isDropdown1Visible" class='bx bx-collapse-vertical'></i>
-                            <i *ngIf="isDropdown1Visible" class='bx bx-expand-vertical'></i>
-                        </a>
-                        <ul class="menu-dropdown" #menuDropdown1 [ngClass]="{'show': isDropdown1Visible}">
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Thời
-                                    trang</a>
-                            </li>
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Phụ
-                                    kiện</a></li>
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Mỹ
-                                    phẩm</a></li>
-                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Thực
-                                    phẩm</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a routerLink="/collection" class="menu-link">Catalogue</a></li>
-                    <li class="menu-item"><a routerLink="/collection" class="menu-link">Khác</a></li>
+                        </ng-template>
+                    </ng-container>
                 </div>
+
                 <ng-container *ngIf="loggedIn; else nottLoggedInBlock">
                     <div class="control-mobile" style="row-gap: 1rem;">
                         <!-- <li class="">
